--- a/VannuStore/VannuStore.Tests/VannuStore.Tests.csproj
+++ b/VannuStore/VannuStore.Tests/VannuStore.Tests.csproj
@@ -13,4 +13,8 @@
     <PackageReference Include="coverlet.collector" Version="3.0.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\VannuStore.Domain\VannuStore.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
